--- a/style.css
+++ b/style.css
@@ -108,3 +108,26 @@ body.theme-dark #puzzleGrid .column-title-category {
 .column-title-element {
     text-align: left;
 }
+
+.mobile-message {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #f7f7f7;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.message-text {
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+    padding: 50px;
+    font-family: "Arial", sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
